syntax = "proto3";

package notification;

option go_package = "./";

message NotificationRequest {
  string message = 1;
  string recipient = 2;
  int64 timestamp = 3;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}

service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
}
